--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,15 +32,30 @@ jobs:
       - run: uv sync --all-packages
       - run: cd apps/meta && uv run pytest -v
 
-  build-meta:
+  test-identity:
     runs-on: ubuntu-latest
-    needs: [lint, test-common, test-meta]
+    steps:
+      - uses: actions/checkout@v4
+      - uses: astral-sh/setup-uv@v5
+      - run: uv sync --all-packages
+      - run: cd apps/identity && uv run pytest -v
+
+  build:
+    runs-on: ubuntu-latest
+    needs: [lint, test-common, test-meta, test-identity]
+    strategy:
+      matrix:
+        include:
+          - service: meta
+            dockerfile: apps/meta/Dockerfile
+          - service: identity
+            dockerfile: apps/identity/Dockerfile
     steps:
       - uses: actions/checkout@v4
       - uses: docker/setup-buildx-action@v3
       - uses: docker/build-push-action@v6
         with:
           context: .
-          file: apps/meta/Dockerfile
+          file: ${{ matrix.dockerfile }}
           push: false
-          tags: meta-service:${{ github.sha }}
+          tags: ${{ matrix.service }}-service:${{ github.sha }}
