--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,7 @@ jobs:
       meta: ${{ steps.filter.outputs.meta }}
       identity: ${{ steps.filter.outputs.identity }}
       vessel: ${{ steps.filter.outputs.vessel }}
+      data: ${{ steps.filter.outputs.data }}
     steps:
       - uses: actions/checkout@v4
       - uses: dorny/paths-filter@v3
@@ -30,6 +31,9 @@ jobs:
               - 'libs/common/**'
             vessel:
               - 'apps/vessel/**'
+              - 'libs/common/**'
+            data:
+              - 'apps/data/**'
               - 'libs/common/**'
 
   lint:
@@ -81,9 +85,19 @@ jobs:
       - run: uv sync --all-packages
       - run: cd apps/vessel && uv run pytest -v
 
+  test-data:
+    runs-on: ubuntu-latest
+    needs: changes
+    if: ${{ needs.changes.outputs.data == 'true' }}
+    steps:
+      - uses: actions/checkout@v4
+      - uses: astral-sh/setup-uv@v5
+      - run: uv sync --all-packages
+      - run: cd apps/data && uv run pytest -v
+
   build:
     runs-on: ubuntu-latest
-    needs: [lint, test-common, test-meta, test-identity, test-vessel]
+    needs: [lint, test-common, test-meta, test-identity, test-vessel, test-data]
     if: ${{ !failure() && !cancelled() }}
     strategy:
       matrix:
@@ -94,6 +108,8 @@ jobs:
             dockerfile: apps/identity/Dockerfile
           - service: vessel
             dockerfile: apps/vessel/Dockerfile
+          - service: data
+            dockerfile: apps/data/Dockerfile
     steps:
       - uses: actions/checkout@v4
       - uses: docker/setup-buildx-action@v3
